@@ -36,6 +36,12 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>kivakit-web-jetty</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         
         <!-- Servlet API -->
@@ -45,24 +51,8 @@
             <artifactId>jakarta.servlet-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>5.8.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.8.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-commons</artifactId>
-            <version>1.8.1</version>
-        </dependency>
-        <dependency>
             <groupId>org.apiguardian</groupId>
             <artifactId>apiguardian-api</artifactId>
-            <version>1.1.2</version>
         </dependency>
         
         <!-- Apache Wicket -->
@@ -92,7 +82,18 @@
     
     <build>
         <plugins>
-            
+            <plugin>
+                
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <!-- add-reads is an experimental javadoc option -->
+                    <additionalOptions>
+                        <!-- - -limit-modules kivakit.web.wicket-->
+                        --add-reads org.apiguardian.api=ALL-UNNAMED
+                    </additionalOptions>                        
+                </configuration>
+            </plugin>            
             <plugin>
                 
                 <groupId>org.apache.maven.plugins</groupId>
